# vm2micro

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-19-vm2micro.md
docs/superpowers/specs/: 2026-03-19-vm2micro-design.md
src/vm2micro/: __init__.py  cli.py  models.py  server.py  ssh_safety.py  viking.py
src/vm2micro/analysis/: fingerprint.py  os_detect.py  patterns.py
src/vm2micro/analysis/detectors/: __init__.py  app_servers.py  common.py  databases.py  queues.py  web_servers.py
src/vm2micro/scaffolds/: CLAUDE.md  vm2micro-hints.yaml
src/vm2micro/scaffolds/agents/: config-generator.md  decomposition-planner.md  dependency-analyzer.md  validator.md  vm-scanner.md
src/vm2micro/tools/: analysis.py  connection.py  filesystem.py  viking_tools.py
src/vm2micro/virtualfs/: __init__.py  cloud.py  guestfs_backend.py  local.py  ssh.py
tests/: test_cli.py  test_detectors.py  test_fingerprint.py  test_guestfs_integration.py  test_models.py  test_os_detect.py  test_patterns.py  test_ssh_safety.py  test_tools_connection.py  test_tools_filesystem.py  test_viking.py  test_virtualfs_guestfs.py  test_virtualfs_local.py  test_virtualfs_ssh.py
tests/data/: build_test_images.py
tests/fixtures/java-tomcat/etc/: os-release
tests/fixtures/java-tomcat/opt/tomcat/conf/: server.xml
tests/fixtures/lamp-debian/etc/: os-release
tests/fixtures/lamp-rhel/etc/: os-release
tests/fixtures/lamp-rhel/etc/httpd/conf/: httpd.conf
tests/fixtures/lamp-rhel/etc/my.cnf.d/: server.cnf
tests/fixtures/lamp-rhel/usr/lib/systemd/system/: httpd.service  (+2 more)
(+5 files in other folders)
