[project]
name = "vm2micro"
version = "0.1.0"
description = "AI-powered VM-to-microservice migration tool for OpenShift"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.18",
    "asyncssh>=2.17.0",
    "aiofiles>=24.1",
    "bashlex>=0.18",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
viking = ["openviking>=0.2.0"]
dev = ["mypy>=1.0", "pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
vm2micro = "vm2micro.cli:main"
vm2micro-server = "vm2micro.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
